tup/parse/testdata/error/output/function_declarations.tup
# missing function body
/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:29: error: expecting "function body", got ""

# missing return type for fn
/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:26: error: expecting "return type or _", got "{"

# unclosed parameter list
/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:3:2: error: expecting ")", got ""

# function body missing closing brace
/home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:2:10: error: expecting "}", got ""
